# mpkg

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  README.md  ar.c  ar.h  configure.ac  contributors.txt  copy.c  copy.h  in_list.c  in_list.h  info.c  info.h  mpkg.c  mpkg.h  mpkg_err.c  mpkg_err.h  sqlfrms.c  sqlfrms.h  utils.c  utils.h  v_compare.c  version.c  version.h
doc/: ar_info  copy_info  doxygen.cfg  sections
doc/mpkg_diagrams/: README.txt  mpkg_database.uxf
examples/: Makefile  README  array.c  c_unions.c  error.c  fts.c  ftw.c  func_pass.c  getopt.c  hash.c  hello.c  info.c  info.json  json_test1.c  json_test4.c  json_test_cast.c  regex.c  signal.c
examples/ar/: .gitignore  ar.c  bin.c
examples/deprecated/: functions.c
json-c/lib/: libjson-c.la  libjson-c.so.3.0.0
json-c/lib/pkgconfig/: json-c.pc
scripts/: clear_autotool_extras  clear_files.txt  del_executables.sh  del_objectfiles.sh  embed_str  embed_str.sh
tests/: Makefile  ar.c  ar_test.c  check_ar.sh  check_links.sh  find_hardlinks.sh  find_symlinks.sh  info_test.c  info_test.sh
tests/files/: README  example_info  info  mav-control  mpkg-mav  ncurses-5.9-1.0.1.amd64.mav  ncurses-5.9.mav  ncurses-5.9.mav.bad  ncurses-5.9.mav.bad2  ncurses_5.9_0002_amd64.mav
